--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jogo_numeros",
   "version": "0.1.0",
+  "homepage" : "Jogo-dos-numeros/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
